# torpc

./: .gitignore  LICENSE  Makefile  README.md  bun.lockb  package.json  tsconfig.json
.github/workflows/: build.yml
examples/: basic-usage.ts  verify-tor.ts
rust/arti-ffi/: Cargo.toml  arti.toml  build.rs  cbindgen.toml
rust/arti-ffi/include/: arti_ffi.h
rust/arti-ffi/src/: lib.rs
scripts/: build-binaries.sh  check_rust.sh  ensure_binaries.js  install_binaries.js
src/: index.ts
src/bindings/: index.ts
src/core/: index.ts
src/rpc/: index.ts
src/types/: index.ts
