[package]
name = "arti-ffi"
version = "0.1.0"
edition = "2021"
authors = [""]
description = "FFI bindings for Arti (Tor implementation) to be used by torpc"

[lib]
name = "arti_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
arti-client = "0.10.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
futures = "0.3"
tor-rtcompat = "0.9.0"
anyhow = "1.0"
libc = "0.2"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "socks", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
toml = "0.5"
fs_extra = "1.2"
tokio-rustls = "0.23.4"
rustls = "0.20.8"
webpki-roots = "0.22.6"
async-io = "1.13.0"

[build-dependencies]
cbindgen = "0.24.0"
